# video_data_utils

./: .gitignore  README.md  pubspec.yaml  runTests.bat
example/: README.md  Release - Shortcut.lnk  fvm  pubspec.yaml
example/lib/: benchmark.dart  classes.dart  isolate.dart  logging.dart  main.dart  metadata.dart  path.dart  units.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: video_data_utils.dart
windows/: .gitignore  CMakeLists.txt  shortcut_resolver.cpp  shortcut_resolver.h  thumbnail_exporter.cpp  thumbnail_exporter.h  video_data_exporter.cpp  video_data_exporter_api.h  video_duration.cpp  video_duration.h
windows/test/: video_data_utils_plugin_test.cpp
